# Rustqlite

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  PLAN.md  README.md  TESTING.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/rustqlite/: Cargo.toml
crates/rustqlite-cli/: Cargo.toml
crates/rustqlite-cli/src/: cli.rs  dot_cmd.rs  main.rs  repl.rs  state.rs
crates/rustqlite-cli/src/output/: mod.rs
crates/rustqlite-parser/: Cargo.toml
crates/rustqlite-parser/src/: ast.rs  error.rs  expr.rs  lib.rs  sqlite.pest  walker.rs
crates/rustqlite/src/: cli.rs  dot_cmd.rs  error.rs  lib.rs  main.rs  repl.rs  state.rs
crates/rustqlite/src/btree/: balance.rs  cell.rs  cursor.rs  mod.rs
crates/rustqlite/src/capi/: connection.rs  result_code.rs  stmt.rs
crates/rustqlite/src/codegen/: mod.rs
crates/rustqlite/src/format/: header.rs  record.rs  serial_type.rs
crates/rustqlite/src/func/: mod.rs
crates/rustqlite/src/output/: format.rs  mod.rs
crates/rustqlite/src/pager/: pcache.rs
crates/rustqlite/src/schema/: bootstrap.rs  mod.rs
crates/rustqlite/src/types/: affinity.rs  value.rs
crates/rustqlite/src/util/: mod.rs
crates/rustqlite/src/vdbe/: cursor.rs  exec.rs  mem.rs  mod.rs  opcode.rs  program.rs  sorter.rs
crates/rustqlite/src/vfs/: mod.rs  os_tokio.rs
crates/rustqlite/tests/: cli_modes.rs  explain_cli.rs  fileformat.rs  slt.rs
crates/rustqlite/tests/slt/: manifest.txt
crates/rustqlite/tests/slt/our/: expression-index.slt  having.slt  index.slt  multi-column-index.slt  update.slt
crates/rustqlite/xtask/: fetch-slt.sh
crates/rustsqlite-core/: Cargo.toml
crates/rustsqlite-core/src/: error.rs  lib.rs
crates/rustsqlite-core/src/btree/: autovac.rs  balance.rs  cell.rs  cursor.rs  delete.rs  destroy.rs  foreign_key_check.rs  index.rs  index_cursor.rs  index_delete.rs  index_insert.rs  insert.rs  integrity_check.rs  mod.rs  page.rs  ptrmap.rs
crates/rustsqlite-core/src/capi/: connection.rs  mod.rs  runtime.rs  stmt.rs  value.rs
crates/rustsqlite-core/src/codegen/: alter.rs  builder.rs  compound.rs  cost.rs  create.rs  cte.rs  delete.rs  drop.rs  drop_index.rs  expr.rs  flatten.rs  index.rs  index_planner.rs  insert.rs  join.rs  join_using.rs  mod.rs  resolve.rs  returning.rs  select.rs  subquery.rs  transaction.rs  trigger.rs  update.rs  upsert.rs  view.rs  window.rs
crates/rustsqlite-core/src/format/: mod.rs  varint.rs  wal.rs  wal_index.rs
crates/rustsqlite-core/src/func/: aggregate.rs  date.rs  json.rs  like.rs  math.rs  mod.rs  printf.rs  registry.rs  scalar.rs  soundex.rs  string.rs
crates/rustsqlite-core/src/pager/: journal.rs  mod.rs  wal.rs
crates/rustsqlite-core/src/pragma/: mod.rs
crates/rustsqlite-core/src/schema/: bootstrap.rs  catalog.rs  mod.rs  table.rs
crates/rustsqlite-core/src/types/: collation.rs  mod.rs  value.rs
crates/rustsqlite-core/src/util/: fp.rs  mod.rs
crates/rustsqlite-core/src/vdbe/: compare.rs  cursor.rs  ephemeral.rs  exec.rs  explain.rs  mod.rs  oe.rs  opcode.rs  program.rs  sorter.rs
crates/rustsqlite-core/src/vfs/: memvfs.rs  mod.rs  os_tokio.rs
crates/rustsqlite-core/tests/: btree_cursor.rs  capi.rs  diff.rs  exec_scan.rs  explain.rs  fileformat.rs  foreign_keys.rs  pager_write.rs  transactions.rs  wal_read.rs  write_roundtrip.rs
docs/: autovacuum-ptrmap.md  json-internals.md  row-value-expressions.md  version-oracle-drift.md  wal-shm-vfs-methods.md  without-rowid-storage.md
