[package]
name = "rustsqlite-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A faithful, file-format-compatible reimplementation of the SQLite3 engine in Rust. Public API mirrors the SQLite C API; I/O is async on tokio."

[dependencies]
rustqlite-parser = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
